--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ button:hover {
 <div class="container">
 
     <!-- 🔥 ใส่รูปตรงนี้ -->
-    <img src="https://i.imgur.com/0y0y0y0.jpg" class="photo">
+    <img src="bow.jpg" class="photo">
 
     <h1>สุขสันต์วันวาเลนไทน์นะ โบว์ 💕</h1>
 
