--- a/index.html
+++ b/index.html
@@ -3,157 +3,110 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Princess Bow 💖</title>
 
-<title>ถึงโบว์ เจ้าหญิงของเค้า 👑💖</title>
+<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;500&display=swap" rel="stylesheet">
 
 <style>
-
 body{
-    margin:0;
-    font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg,#ffd6e7,#fff0f6);
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    overflow:hidden;
+  margin:0;
+  font-family:'Prompt',sans-serif;
+  text-align:center;
+  background:linear-gradient(135deg,#ffd6ec,#ffe9f6,#fff);
+  overflow:hidden;
 }
 
-/* กล่องหลัก */
 .container{
-    background:white;
-    padding:30px;
-    border-radius:30px;
-    text-align:center;
-    box-shadow:0 15px 40px rgba(255,105,180,0.4);
-    max-width:340px;
-    position:relative;
+  padding:30px;
 }
 
-/* มงกุฎ */
-.crown{
-    font-size:30px;
-    position:absolute;
-    top:-20px;
-    left:50%;
-    transform:translateX(-50%);
-}
-
-/* รูปแฟน */
-.photo{
-    width:230px;
-    border-radius:20px;
-    border:5px solid #fff;
-    box-shadow:0 10px 25px rgba(255,105,180,0.5);
-    margin-bottom:15px;
-}
-
-/* หัวข้อ */
 h1{
-    color:#ff4f8b;
-    font-size:23px;
-    margin:10px 0;
+  color:#ff4da6;
+  font-size:28px;
 }
 
-/* ข้อความ */
-p{
-    color:#555;
-    font-size:15px;
+img{
+  width:220px;
+  border-radius:20px;
+  box-shadow:0 10px 30px rgba(255,105,180,0.4);
 }
 
-/* ปุ่ม */
 button{
-    background:linear-gradient(45deg,#ff4f8b,#ff7aa8);
-    border:none;
-    color:white;
-    padding:12px 22px;
-    border-radius:25px;
-    font-size:16px;
-    cursor:pointer;
-    margin-top:15px;
-    box-shadow:0 5px 15px rgba(255,105,180,0.4);
-    transition:0.3s;
+  margin-top:20px;
+  padding:15px 25px;
+  font-size:18px;
+  border:none;
+  border-radius:30px;
+  background:linear-gradient(45deg,#ff4da6,#ff85c1);
+  color:white;
+  cursor:pointer;
+  box-shadow:0 5px 15px rgba(255,105,180,0.5);
 }
 
 button:hover{
-    transform:scale(1.08);
-}
-
-/* ข้อความเซอร์ไพรส์ */
-.message{
-    display:none;
-    margin-top:15px;
-    color:#ff4f8b;
-    font-weight:bold;
-    font-size:16px;
+  transform:scale(1.05);
 }
 
 /* หัวใจลอย */
 .heart{
-    position:fixed;
-    top:-10px;
-    animation:fall linear infinite;
+  position:fixed;
+  color:pink;
+  font-size:20px;
+  animation:float 6s linear infinite;
 }
 
-@keyframes fall{
-    to{
-        transform:translateY(110vh);
-    }
+@keyframes float{
+  0%{transform:translateY(100vh) scale(0);}
+  100%{transform:translateY(-10vh) scale(1.5);}
 }
-
 </style>
-
 </head>
-<body>
 
-<!-- 🎵 เพลงรัก -->
-<audio id="music" autoplay loop>
-    <source src="music.mp3" type="audio/mpeg">
-</audio>
+<body>
 
 <div class="container">
 
-<div class="crown">👑</div>
+<h1>💖 Happy Valentine Princess Bow 👑</h1>
 
-<img src="bow.jpg" class="photo">
+<img src="bow.jpg">
 
-<h1>สุขสันต์วันวาเลนไทน์นะ โบว์ 💖</h1>
+<p>
+โบว์คือเจ้าหญิงของเค้าเสมอ 🥺💗<br>
+รักที่สุดในโลกเลยนะ 💕
+</p>
 
-<p>ขอบคุณที่เข้ามาเป็นรอยยิ้มของเค้าในทุก ๆ วัน ❤️</p>
-
-<button onclick="showMessage()">กดดูเซอร์ไพรส์ 🎁</button>
-
-<div class="message" id="msg">
-เค้ารักโบว์ที่สุดในโลกเลยนะ 💕<br>
-อยู่ด้วยกันไปนาน ๆ นะ เจ้าหญิงของเค้า 👑🥰
-</div>
+<button onclick="startLove()">💘 กดหัวใจของเรา 💘</button>
 
 </div>
+
+<audio id="music" autoplay loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
 
 <script>
+let music = document.getElementById("music");
 
-function showMessage(){
-    document.getElementById("msg").style.display="block";
-}
+function startLove(){
+  music.play();
 
-/* เล่นเพลงอัตโนมัติ (แก้ iPhone ไม่เล่น) */
-window.addEventListener("click",()=>{
-    document.getElementById("music").play();
-});
+  alert("เซอร์ไพรส์ 💖 รักโบว์ที่สุดเลยนะ 👑");
 
-/* สร้างหัวใจลอย */
-setInterval(()=>{
-    const heart=document.createElement("div");
+  for(let i=0;i<20;i++){
+    let heart=document.createElement("div");
     heart.className="heart";
     heart.innerHTML="💖";
     heart.style.left=Math.random()*100+"vw";
-    heart.style.fontSize=(Math.random()*20+15)+"px";
-    heart.style.animationDuration=(Math.random()*3+2)+"s";
+    heart.style.fontSize=(20+Math.random()*30)+"px";
     document.body.appendChild(heart);
 
-    setTimeout(()=>heart.remove(),5000);
-},300);
+    setTimeout(()=>heart.remove(),6000);
+  }
+}
 
+// เผื่อมือถือบล็อก autoplay
+document.addEventListener("click",()=>{
+  music.play();
+});
 </script>
 
 </body>
