--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Happy Valentine 💖</title>
+<title>ถึงโบว์ 💖</title>
 
 <style>
 
@@ -17,66 +17,65 @@ body{
     align-items:center;
     height:100vh;
     overflow:hidden;
+    text-align:center;
 }
 
 .container{
-    text-align:center;
     color:white;
 }
 
 button{
-    padding:15px 30px;
-    font-size:20px;
+    padding:12px 25px;
+    font-size:18px;
     border:none;
     border-radius:30px;
     background:#ff4d6d;
     color:white;
     cursor:pointer;
-    box-shadow:0 5px 15px rgba(0,0,0,0.3);
+    margin-top:10px;
 }
 
 button:hover{
-    transform:scale(1.1);
+    transform:scale(1.05);
+}
+
+img{
+    width:220px;
+    border-radius:20px;
+    margin-top:15px;
+    box-shadow:0 10px 25px rgba(0,0,0,0.4);
+}
+
+input{
+    padding:10px;
+    border-radius:15px;
+    border:none;
+    width:200px;
+    text-align:center;
+    margin-top:10px;
 }
 
 #content{
     display:none;
-    animation:fade 1.5s;
 }
 
-img{
-    width:250px;
-    border-radius:20px;
-    margin-top:20px;
-    box-shadow:0 10px 25px rgba(0,0,0,0.4);
+#reply{
+    margin-top:15px;
+    font-size:20px;
+    font-weight:bold;
 }
 
-h1{
-    font-size:28px;
-    margin-top:20px;
-}
-
-@keyframes fade{
-    from{opacity:0; transform:translateY(30px);}
-    to{opacity:1; transform:translateY(0);}
-}
-
-/* หัวใจลอย */
+/* หัวใจ */
 
 .heart{
-    position:absolute;
-    color:#ff4d6d;
-    animation:float 6s linear infinite;
-    font-size:20px;
+    position:fixed;
+    font-size:25px;
+    animation:explode 1s linear forwards;
 }
 
-@keyframes float{
-    from{
-        transform:translateY(100vh) scale(1);
-        opacity:1;
-    }
+@keyframes explode{
     to{
-        transform:translateY(-10vh) scale(2);
+        transform:translateY(-200px) scale(2);
         opacity:0;
     }
 }
@@ -88,52 +87,106 @@ h1{
 
 <div class="container">
 
-    <button onclick="startSurprise()">กดดูเซอร์ไพรส์ 🎁</button>
+<button onclick="start()">กดดูเซอร์ไพรส์ 🎁</button>
 
-    <div id="content">
-        <h1>สุขสันต์วันวาเลนไทน์นะโบว์ 💕</h1>
-        <p>เค้ารักโบว์ที่สุดในโลกเลยนะ 🥰</p>
+<div id="content">
 
-        <img src="bow.jpg" alt="Bow">
+<h1>สุขสันต์วันวาเลนไทน์นะโบว์ 💕</h1>
+<p>เค้ารักโบว์ที่สุดในโลกเลย 🥰</p>
 
-    </div>
+<img src="bow.jpg">
+
+<h2>รักพี่ไหม 💖</h2>
+
+<input type="text" id="answer" placeholder="พิมพ์คำตอบ">
+
+<br>
+
+<button onclick="send()">ส่งคำตอบ 💌</button>
+
+<button id="runBtn" style="display:none; background:#999;">
+ไม่รัก 😭
+</button>
+
+<div id="reply"></div>
 
 </div>
 
-<audio id="music" src="music.mp3" preload="auto"></audio>
+</div>
+
+<audio id="music" src="music.mp3"></audio>
 
 <script>
 
 const music = document.getElementById("music");
 
-function startSurprise(){
-
+function start(){
     music.play();
-
     document.getElementById("content").style.display="block";
-
-    createHearts();
 }
 
 
-// สร้างหัวใจลอย
-function createHearts(){
+// ส่งคำตอบ
+function send(){
 
-    setInterval(()=>{
+    let ans = document.getElementById("answer").value;
 
-        const heart = document.createElement("div");
+    // บันทึกคำตอบ (เก็บในเครื่อง)
+    localStorage.setItem("bow_answer", ans);
+
+    if(ans.includes("รัก")){
+
+        document.getElementById("reply").innerHTML =
+        "เค้ารู้แล้วว่าโบว์รักพี่ 💖😍";
+
+        explodeHearts();
+
+    }
+    else{
+
+        document.getElementById("reply").innerHTML =
+        "งื้อออ ต้องรักสิ 🥺";
+
+        runButton();
+
+    }
+}
+
+
+// หัวใจระเบิด
+function explodeHearts(){
+
+    for(let i=0;i<40;i++){
+
+        const heart=document.createElement("div");
 
         heart.className="heart";
         heart.innerHTML="💖";
 
         heart.style.left=Math.random()*100+"vw";
-        heart.style.fontSize=(20+Math.random()*30)+"px";
+        heart.style.top=Math.random()*100+"vh";
 
         document.body.appendChild(heart);
 
-        setTimeout(()=>heart.remove(),6000);
+        setTimeout(()=>heart.remove(),1000);
+    }
+}
 
-    },300);
+
+// ปุ่มหนี
+function runButton(){
+
+    const btn=document.getElementById("runBtn");
+
+    btn.style.display="inline-block";
+
+    btn.onmouseover=()=>{
+
+        btn.style.position="absolute";
+        btn.style.left=Math.random()*80+"vw";
+        btn.style.top=Math.random()*80+"vh";
+
+    }
 }
 
 </script>
