--- a/index.html
+++ b/index.html
@@ -4,163 +4,188 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>ถึงโบว์ 💖</title>
+<title>ถึงโบว์ เจ้าหญิงของเค้า 👑💖</title>
 
 <style>
 
 body{
     margin:0;
-    font-family: "Prompt", sans-serif;
-    background: linear-gradient(135deg,#ff9a9e,#fad0c4);
+    font-family: Arial, sans-serif;
+    background: linear-gradient(135deg,#ffd6e7,#fff0f6);
     display:flex;
     justify-content:center;
     align-items:center;
     height:100vh;
     overflow:hidden;
-    text-align:center;
 }
 
+/* กล่อง */
 .container{
-    color:white;
+    background:white;
+    padding:30px;
+    border-radius:30px;
+    text-align:center;
+    box-shadow:0 15px 40px rgba(255,105,180,0.4);
+    max-width:350px;
+    position:relative;
+}
+
+.crown{
+    font-size:30px;
+    position:absolute;
+    top:-20px;
+    left:50%;
+    transform:translateX(-50%);
+}
+
+.photo{
+    width:230px;
+    border-radius:20px;
+    border:5px solid #fff;
+    box-shadow:0 10px 25px rgba(255,105,180,0.5);
+    margin-bottom:15px;
+}
+
+h1{
+    color:#ff4f8b;
 }
 
 button{
-    padding:12px 25px;
-    font-size:18px;
+    background:linear-gradient(45deg,#ff4f8b,#ff7aa8);
     border:none;
-    border-radius:30px;
-    background:#ff4d6d;
     color:white;
+    padding:12px 22px;
+    border-radius:25px;
+    font-size:16px;
     cursor:pointer;
-    margin-top:10px;
-}
-
-button:hover{
-    transform:scale(1.05);
-}
-
-img{
-    width:220px;
-    border-radius:20px;
     margin-top:15px;
-    box-shadow:0 10px 25px rgba(0,0,0,0.4);
+    box-shadow:0 5px 15px rgba(255,105,180,0.4);
+}
+
+.message{
+    display:none;
+    margin-top:15px;
+    color:#ff4f8b;
+    font-weight:bold;
 }
 
 input{
     padding:10px;
-    border-radius:15px;
-    border:none;
-    width:200px;
-    text-align:center;
+    border-radius:10px;
+    border:1px solid #ccc;
+    width:80%;
     margin-top:10px;
+    text-align:center;
 }
-
-#content{
-    display:none;
-}
-
-#reply{
-    margin-top:15px;
-    font-size:20px;
-    font-weight:bold;
-}
-
-/* หัวใจ */
 
 .heart{
     position:fixed;
-    font-size:25px;
-    animation:explode 1s linear forwards;
+    top:-10px;
+    animation:fall linear infinite;
 }
 
-@keyframes explode{
+@keyframes fall{
     to{
-        transform:translateY(-200px) scale(2);
-        opacity:0;
+        transform:translateY(110vh);
     }
+}
+
+.bigHeart{
+    position:fixed;
+    font-size:30px;
+    animation:boom 1s linear forwards;
+}
+
+@keyframes boom{
+    from{transform:scale(0);opacity:1;}
+    to{transform:scale(3);opacity:0;}
 }
 
 </style>
 </head>
 
-<body>
+<body onclick="firstTouch()">
 
-<div class="container">
+<div class="container" id="content" style="display:none;">
 
-<button onclick="start()">กดดูเซอร์ไพรส์ 🎁</button>
+<div class="crown">👑</div>
 
-<div id="content">
+<img src="bow.jpg" class="photo">
 
-<h1>สุขสันต์วันวาเลนไทน์นะโบว์ 💕</h1>
-<p>เค้ารักโบว์ที่สุดในโลกเลย 🥰</p>
+<h1>สุขสันต์วันวาเลนไทน์นะ โบว์ 💖</h1>
 
-<img src="bow.jpg">
+<p>ขอบคุณที่เข้ามาเป็นรอยยิ้มของเค้า ❤️</p>
 
-<h2>รักพี่ไหม 💖</h2>
+<button onclick="showMessage()">กดดูเซอร์ไพรส์ 🎁</button>
 
-<input type="text" id="answer" placeholder="พิมพ์คำตอบ">
+<div class="message" id="msg">
+
+เค้ารักโบว์ที่สุดในโลกเลยนะ 💕<br>
+อยู่ด้วยกันไปนาน ๆ นะ เจ้าหญิงของเค้า 👑🥰
+
+<br><br>
+
+💌 รักพี่ไหม ?
+<br>
+
+<input type="text" id="answer" placeholder="พิมพ์คำตอบตรงนี้">
 
 <br>
 
-<button onclick="send()">ส่งคำตอบ 💌</button>
-
-<button id="runBtn" style="display:none; background:#999;">
-ไม่รัก 😭
-</button>
-
-<div id="reply"></div>
+<button onclick="checkLove()">ส่งคำตอบ 💕</button>
 
 </div>
 
 </div>
 
-<audio id="music" src="music.mp3"></audio>
+<!-- เพลง -->
+<audio id="music" src="music.mp3" preload="auto"></audio>
 
 <script>
 
 const music = document.getElementById("music");
 
-function start(){
-    music.play();
+/* แตะครั้งแรกให้เพลงเล่น */
+function firstTouch(){
     document.getElementById("content").style.display="block";
+    music.play().catch(()=>{});
 }
 
+/* เปิดข้อความ */
+function showMessage(){
+    document.getElementById("msg").style.display="block";
+}
 
-// ส่งคำตอบ
-function send(){
+/* ตรวจคำตอบ */
+function checkLove(){
 
-    let ans = document.getElementById("answer").value;
+    let text = document.getElementById("answer").value.trim();
 
-    // บันทึกคำตอบ (เก็บในเครื่อง)
-    localStorage.setItem("bow_answer", ans);
-
-    if(ans.includes("รัก")){
-
-        document.getElementById("reply").innerHTML =
-        "เค้ารู้แล้วว่าโบว์รักพี่ 💖😍";
+    if(text.includes("รัก")){
 
         explodeHearts();
 
-    }
-    else{
+        alert("เค้ารู้แล้วว่าโบว์รัก 😍💖");
 
-        document.getElementById("reply").innerHTML =
-        "งื้อออ ต้องรักสิ 🥺";
+    }else if(text.includes("ไม่")){
 
-        runButton();
+        alert("ไม่รักจริงหรอ 😭");
+
+    }else{
+
+        alert("ตอบดี ๆ นะ 😆");
 
     }
 }
 
 
-// หัวใจระเบิด
+/* หัวใจระเบิด */
 function explodeHearts(){
 
     for(let i=0;i<40;i++){
 
-        const heart=document.createElement("div");
-
-        heart.className="heart";
+        let heart=document.createElement("div");
+        heart.className="bigHeart";
         heart.innerHTML="💖";
 
         heart.style.left=Math.random()*100+"vw";
@@ -170,24 +195,25 @@ function explodeHearts(){
 
         setTimeout(()=>heart.remove(),1000);
     }
+
 }
 
 
-// ปุ่มหนี
-function runButton(){
+/* หัวใจลอย */
+setInterval(()=>{
+    let heart=document.createElement("div");
+    heart.className="heart";
+    heart.innerHTML="💗";
 
-    const btn=document.getElementById("runBtn");
+    heart.style.left=Math.random()*100+"vw";
+    heart.style.fontSize=(Math.random()*20+15)+"px";
+    heart.style.animationDuration=(Math.random()*3+2)+"s";
 
-    btn.style.display="inline-block";
+    document.body.appendChild(heart);
 
-    btn.onmouseover=()=>{
+    setTimeout(()=>heart.remove(),5000);
 
-        btn.style.position="absolute";
-        btn.style.left=Math.random()*80+"vw";
-        btn.style.top=Math.random()*80+"vh";
-
-    }
-}
+},300);
 
 </script>
 
